# hs-revolver

./: .gitignore  .travis.yml  Makefile  README.md  revolver.cabal  stack.yaml
cbits/: hs-revolver.c
gbits/: hs-revolver.go
include/: hs-revolver.h
src/Foreign/C/: Revolver.hsc
