name:          revolver
version:       0.1.0
synopsis:      A decentralized peer-to-peer broadcast network.
license:       GPL-3
license-file:  LICENSE
copyright:     2017 DFINITY Stiftung
author:        Enzo Haussecker <enzo@dfinity.org>
maintainer:    Enzo Haussecker <enzo@dfinity.org>
stability:     Experimental
category:      Network
homepage:      https://github.com/dfinity/hs-revolver
bug-reports:   https://github.com/dfinity/hs-revolver/issues
build-type:    Simple
cabal-version: >=1.10

library
  build-depends:
    base,
    bindings-DSL,
    bytestring,
    data-default-class
  c-sources:
    cbits/hs-revolver.c
  default-language:
    Haskell2010
  exposed-modules:
    Foreign.C.Revolver
  extra-libraries:
    revolver
  ghc-options:
    -O2
    -Wall
  hs-source-dirs:
    src
